gitops/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ford-frontend
  labels:
    app: ford-frontend
    component: ui
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: ford-frontend
