gitops/base/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ford-ingress
  labels:
    app: ford
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: ford-shop.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ford-frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: ford-backend-active
            port:
              number: 8080
